--- a/assets/css/web-gallery.css
+++ b/assets/css/web-gallery.css
@@ -9,10 +9,6 @@
   clear: both;
 }
 
-.tb-web-gallery[class^='tbwb-grid-1'] > *{
-  float: left;
-  box-sizing: border-box;
-}
 .tb-web-gallery.tbwb-grid-1 > *{
   width: 100%;
 }
@@ -23,8 +19,23 @@
   width: 33%;
 }
 
+/*GALLERY ITEMS*/
+.tb-web-gallery .tb-web-gallery-item{
+  float: left;
+  box-sizing: border-box;
+}
+.tb-web-gallery .tb-web-gallery-item .tb-web-gallery-inner-wrap{
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 100%;
+}
+.tb-web-gallery .tb-web-gallery-item .tb-web-gallery-inner-wrap > *{
+  position: absolute;
+}
+
 
 /*IMAGE TYPE*/
 .tb-web-gallery .tb-web-gallery-item img:first-of-type{
-
+  max-width: 100%;
 }
