--- a/assets/css/web-gallery.css
+++ b/assets/css/web-gallery.css
@@ -23,6 +23,7 @@
 .tb-web-gallery .tb-web-gallery-item{
   float: left;
   box-sizing: border-box;
+  padding: 3px;
 }
 .tb-web-gallery .tb-web-gallery-item .tb-web-gallery-inner-wrap{
   width: 100%;
@@ -38,4 +39,26 @@
 /*IMAGE TYPE*/
 .tb-web-gallery .tb-web-gallery-item img:first-of-type{
   max-width: 100%;
+}
+
+
+/*OVERLAY*/
+#tbwg-overlay {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  display: none;
+}
+.tbwg-open #tbwg-overlay{
+  display: block;
+}
+#tbwg-overlay .tbwg-dimmer{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0,0,0,0.4);
+}
+#tbwg-overlay .tbwg-content {
+  position: absolute;
 }
