--- a/assets/css/web-gallery.css
+++ b/assets/css/web-gallery.css
@@ -60,5 +60,18 @@
   background: rgba(0,0,0,0.4);
 }
 #tbwg-overlay .tbwg-content {
+  position: relative;
+}
+
+#tbwgClose {
   position: absolute;
+  width: 50px;
+  height: 50px;
+  z-index: 5;
+  font-family: monospace;
+  font-size: 40px;
+  text-align: center;
+  right: 5px;
+  top: 5px;
+  cursor: pointer;
 }
