CSS Improvements and simplified function call in the Example
Uploaded the current Version to my Server and linked it in the README
Centered big images in the gallery view

--- a/assets/css/web-gallery.css
+++ b/assets/css/web-gallery.css
@@ -91,7 +91,7 @@ body.tbwg-open {
 #tbwg-overlay .tbwg-content div.tb-web-gallery-inner-wrap.image-type img {
   max-width: 90%;
   max-height: 90vh;
-  margin: 5% auto;
+  margin: 5vh auto;
   display: block;
 }
 #tbwg-overlay div.tb-web-gallery-inner-wrap.text-type p, #tbwg-overlay div.tb-web-gallery-inner-wrap.text-type span.txt {
