Overlay reuse function
To implement the gallery multiple times in one page the overlay is now
reused but to old gallery gets destroyed
Added necessary CSS

--- a/assets/css/web-gallery.css
+++ b/assets/css/web-gallery.css
@@ -81,7 +81,9 @@ body.tbwg-open {
   width: 100%;
   display: block;
 }
-
+#tbwg-overlay .tbwg-content > div.inactive{
+  display: none;
+}
 #tbwg-overlay .tbwg-content div.tb-web-gallery-inner-wrap {
   float: left;
   width: 100vw;
